Final update for submit

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Sarah's Travel Blog</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
 	<h1>Sarah's Travel Blog</h1>
