--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Sarah's Travel Blog</h1>
-	<p1>This is the travel blog of Sarah Louie</p1>
+	<p>This is the travel blog of Sarah Louie</p>
 
 </body>
 </html>
