Duh - forgot to save
updated with image and new titles

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sarah's Travel Blog</title>
+	<title>SLOUIE On The Go</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
-	<h1>Sarah's Travel Blog</h1>
-	<p>The Adventures (and Misadventures) of Sarah</p>
+	<h1>SLOUIE OTG</h1>
+	<img src="images/wander.jpg" alt="Slouie walking in France" title="Slouie walking">
+	<p>Slouie's Adventures (& misadventures!)</p>
 
 </body>
 </html>
