--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SLOUIE On The Go</title>
+	<title>SLOUIE OTG</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
-	<h1>SLOUIE OTG</h1>
+	<h1>SLOUIE On The Go</h1>
 	<img src="images/wander.jpg" alt="Slouie walking in France" title="Slouie walking">
 	<p>Slouie's Adventures (& misadventures!)</p>
 
