--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>SLOUIE On The Go</h1>
-	<img src="images/wander.jpg" alt="Slouie walking in France" title="Slouie walking">
+	<img src="images/logo.jpg" alt="Slouie on the go" title="Slouie logo">
 	<p>Slouie's Adventures (& misadventures!)</p>
 
 </body>
