--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>SLOUIE On The Go</h1>
 	<img src="images/logo.png" alt="Slouie on the go" title="Slouie logo">
-	<p>Slouie's Adventures (& misadventures!)</p>
+	<p>Slouie's Adventures (+ misadventures!)</p>
 
 </body>
 </html>
