--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,13 @@
 <body>
 	<h1>SLOUIE On The Go</h1>
 	<img src="images/logo.png" alt="Slouie on the go" title="Slouie logo">
-	<p>Slouie's Adventures (+ misadventures!)</p>
+	<h3>Slouie's Adventures (+ misadventures!)</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </body>
 </html>
