--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,25 +5,34 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
-	<h1>SLOUIE On The Go</h1>
-	<ul>
-		<li><a href="#">About</a></li>
-		<li><a href="#">Trips</a></li>
-		<li><a href="#">Photos</a></li>
-		<li><a href="#">Upcoming</a></li>
-	</ul>
-	<img src="images/logo.png" alt="Slouie on the go" title="Slouie logo">
-
-	<h3>Slouie's Adventures (+ misadventures!)</h3>
-
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<a href="sarah.e.louie@gmail.com"></a>
-
+	<header>
+		<img src="images/logo.png" alt="Slouie on the go" title="Slouie logo">
+		<nav>
+			<a href="#">About</a>
+			<a href="#">Trips</a>
+			<a href="#">Photos</a>
+			<a href="#">Upcoming</a>
+		</nav>
+	</header>
+	<section id="intro">
+		<img src="images/logo.png" alt="Slouie on the go" title="Slouie logo">
+		<h1>Slouie's Adventures (+ misadventures!)</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+	</section>
+	<section id="featured">
+		<article>
+			<h2>Blog Title</h2>
+			<h3>byline</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+			<a href="#">Read More</a>
+		</article>
+	</section>
+	<footer>
+		<a href="mailto:sarah.e.louie@gmail.com">sarah.e.louie@gmail.com</a>
+	</footer>
 </body>
 </html>
