--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<img src="images/blacklogo.png" alt="Slouie on the go" title="Slouie logo">
+		<h1>slouie on the go</h1>
 		<nav>
 			<a href="#">About</a>
 			<a href="#">Trips</a>
@@ -16,6 +16,7 @@
 	</header>
 	<section id="intro">
 		<h1>Slouie's Adventures (+ misadventures!)</h1>
+		<img src="images/wander.jpg" alt="slouie on the go" title="slouie walking">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
