removing section ID from css

--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -17,22 +17,18 @@
 	<section id="intro">
 		<h1>Slouie's Adventures (+ misadventures!)</h1>
 		<img src="images/wander.jpg" alt="slouie on the go" title="slouie walking">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+		<p>Follow me around the world on my gap year from "real life"</p>
 	</section>
 	<section id="featured">
 		<article>
-			<h2>Blog Title</h2>
-			<h3>byline</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip</p>
+			<h2>Spontaneous Trip to Portugal</h2>
+			<h3>When your best friend calls last minute to book a trip</h3>
+			<p>Back in June, my best friend called me up saying she had 10 days off in July and wanted to take a trip abroad. Never one to turn down an adventure, I agreed and we started listing places we wanted to go. After naming a few places, we decided it had to be somewhere neither of us had been before and was a direct flight from our favorite airport. The list was surprisingly short and that afternoon, we booked a flight to Lisbon...</p>
 			<a href="#">Read More</a>
 		</article>
 	</section>
 	<footer>
-		<a href="mailto:sarah.e.louie@gmail.com">sarah.e.louie@gmail.com</a>
+		<a href="mailto:sarah.e.louie@gmail.com">Send me an e-mail!</a>
 	</footer>
 </body>
 </html>
