--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1 id="logotitle">slouie on the go</h1>
+		<h1>slouie on the go</h1>
 		<nav>
 			<a href="#">About</a>
 			<a href="#">Trips</a>
