--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="wrapper">
 	<header>
-		<h1>slouie on the go</h1>
+		<img src="images/blacklogo.png" alt="slouie on the go" title="slouie logo">
 		<nav>
 			<a href="#">About</a>
 			<a href="#">Trips</a>
