--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
-	<div class="wrapper">
+	<div id="wrapper">
 	<header>
-		<img src="images/blacklogo.jpg" alt="slouie on the go" title="slouie logo">
+		<h1>slouie on the go</h1>
 		<nav>
 			<a href="#">About</a>
 			<a href="#">Trips</a>
@@ -35,6 +35,6 @@
 	<footer>
 		<a href="mailto:sarah.e.louie@gmail.com">Send me an e-mail!</a>
 	</footer>
-</div>
+	</div>
 </body>
 </html>
