slight updates to css
prior to floating anything

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
+	<div id="wrapper">
 	<header>
 		<img src="images/blacklogo.jpg" alt="slouie logo" title="slouie on the go"
 		<nav>
@@ -32,21 +33,21 @@
 
 	<section id="latest1">
 		<img src="images/cave.png">
-		<h3>Benagil Cave</h3>
+		<h2>Benagil Cave</h2>
 		<p>After seeing this cave on numerous other travel blogs, we knew we had to seek it out for ourselves...</p>
 		<a ref="#">Read More</a>
 	</section>
 
 	<section id="latest2">
 		<img src="images/westcoast.png">
-		<h3>West Coast Adventure Tour</h3>
+		<h2>West Coast Adventure Tour</h2>
 		<p>By far the highlight of our trip to Portugal was a guided hike we took along Cape St Vincent on Portugal's southwestern coast...</p>
 		<a ref="#">Read More</a>
 	</section>
 
 	<section id="latest3">
 		<img src="images/roadtrip.png">
-		<h3>Driving Up the Coast</h3>
+		<h2>Driving Up the Coast</h2>
 		<p>After a few days in Lagos, we decided to return to Lisbon - but wanted to take the scenic route...</p>
 		<a ref="#">Read More</a>
 	</section>
@@ -54,5 +55,6 @@
 	<footer>
 		<a href="mailto:sarah.e.louie@gmail.com">Send me an e-mail!</a>
 	</footer>
+</div>
 </body>
 </html>
