--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -35,21 +35,21 @@
 		<img src="images/cave.png">
 		<h2>Benagil Cave</h2>
 		<p>After seeing this cave on numerous other travel blogs, we knew we had to seek it out for ourselves...</p>
-		<a ref="#">Read More</a>
+		<a href="#">Read More</a>
 	</section>
 
 	<section id="latest2">
 		<img src="images/westcoast.png">
 		<h2>West Coast Adventure Tour</h2>
 		<p>By far the highlight of our trip to Portugal was a guided hike we took along Cape St Vincent on Portugal's southwestern coast...</p>
-		<a ref="#">Read More</a>
+		<a href="#">Read More</a>
 	</section>
 
 	<section id="latest3">
 		<img src="images/roadtrip.png">
 		<h2>Driving Up the Coast</h2>
 		<p>After a few days in Lagos, we decided to return to Lisbon - but wanted to take the scenic route...</p>
-		<a ref="#">Read More</a>
+		<a href="#">Read More</a>
 	</section>
 
 	<footer>
