updated nav error

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="wrapper">
 	<header>
-		<img src="images/blacklogo.jpg" alt="slouie logo" title="slouie on the go"
+		<img src="images/blacklogo.jpg" alt="slouie logo" title="slouie on the go">
 		<nav>
 			<a href="#">About</a>
 			<a href="#">Trips</a>
@@ -30,7 +30,7 @@
 			<a href="#">Read More</a>
 		</article>
 	</section>
-
+<div id="recentblogs">
 	<section id="latest1">
 		<img src="images/cave.png">
 		<h2>Benagil Cave</h2>
@@ -51,7 +51,7 @@
 		<p>After a few days in Lagos, we decided to return to Lisbon - but wanted to take the scenic route...</p>
 		<a href="#">Read More</a>
 	</section>
-
+</div>
 	<footer>
 		<a href="mailto:sarah.e.louie@gmail.com">Send me an e-mail!</a>
 	</footer>
