--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img src="images/blacklogo.jpg" alt="slouie logo" title="slouie on the go">
+		<h1>slouie on the go</h1>
 		<nav>
 			<a href="#">About</a>
 			<a href="#">Trips</a>
