--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -31,26 +31,28 @@
 		</article>
 	</section>
 
-	<div class="column" id="column1">
+	<section id="three_column" class="clearfix">
+		<article id="left">
 		<img src="images/cave.png">
 		<h2>Benagil Cave</h2>
 		<p>After seeing this cave on numerous other travel blogs, we knew we had to seek it out for ourselves...</p>
 		<a href="#">Read More</a>
-	</div>
+	</article>
 
-	<div class="column" id="column2">
+		<article id="center">
 		<img src="images/westcoast.png">
 		<h2>West Coast Adventure Tour</h2>
 		<p>By far the highlight of our trip to Portugal was a guided hike we took along Cape St Vincent on Portugal's southwestern coast...</p>
 		<a href="#">Read More</a>
-	</div>
+	</article>
 
-	<div class="column" id="column3">
+		<article id="right">
 		<img src="images/roadtrip.png">
 		<h2>Driving Up the Coast</h2>
 		<p>After a few days in Lagos, we decided to return to Lisbon - but wanted to take the scenic route...</p>
 		<a href="#">Read More</a>
-	</div>
+	</article>
+	</section>
 
 	<footer>
 		<a href="mailto:sarah.e.louie@gmail.com">Send me an e-mail!</a>
