--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -16,14 +16,10 @@
 		</nav>
 	</header>
 
-	<section id="intro">
-		<h1>Slouie's Adventures (+ misadventures!)</h1>
-		<p>Follow me around the world on my gap year from "real life"</p>
-		<img src="images/wander.jpg" alt="slouie on the go" title="slouie walking">
-	</section>
-
 	<section id="featured">
-		<article>
+		<img src="images/wander.jpg" alt="slouie on the go" title="slouie walking">
+		<article id=featured_article>
+			<h1>Slouie's Adventures (+ misadventures!)</h1>
 			<h2>Spontaneous Trip to Portugal</h2>
 			<h3>When your best friend calls last minute to book a trip</h3>
 			<p>Back in June, my best friend called me up saying she had 10 days off in July and wanted to take a trip abroad. Never one to turn down an adventure, I agreed and we started listing places we wanted to go. After naming a few places, we decided it had to be somewhere neither of us had been before and was a direct flight from our favorite airport. The list was surprisingly short and that afternoon, we booked a flight to Lisbon...</p>
