final forgot clearfix

--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -16,7 +16,7 @@
 		</nav>
 	</header>
 
-	<section id="featured">
+	<section id="featured" class="clearfix">
 		<img src="images/wander.jpg" alt="slouie on the go" title="slouie walking">
 		<article id=featured_article>
 			<h1>Slouie's Adventures (+ misadventures!)</h1>
