--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -17,7 +17,7 @@
 	</header>
 
 	<section id="featured" class="clearfix">
-		<img src="images/wander.jpg" alt="slouie on the go" title="slouie walking">
+		<img src="images/bffs.jpg" alt="best friends" title="best friends">
 		<article id=featured_article>
 			<h1>Slouie's Adventures (+ misadventures!)</h1>
 			<h2>Spontaneous Trip to Portugal</h2>
